feat: Registro de usuarios

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 
   /* Estados */
   --color-success: #22C55E;
-  --color-error: #EF4444;
+  --color-error: #FF2222;
   --color-warning: #F59E0B;
 
   /* Borde / división */
